Revision history for Dancer-Plugin-Database

1.11    2011-02-18
        - Fix bug RT #65825 - quick_select didn't actually use the where clause
          correctly.
        - Extended test suite.

1.10    2011-02-11
        - New feature quick_select
        - Fix bug RT #65651, quick_insert generating SQL which MySQL/Postgres
          didn't accept due to use of quote() rather than quote_identifier(),
          thanks to Christian Sánchez and Michael Stiller
        - Fix GH #5 - named connections not working properly - thanks to
          "crayon"

1.00    2011-01-10
        - Bumping to 1.00 to signify being ready for production use, for users
          who have a mistrust of 0.x version numbers.
        - Applied Alan Haggai's changes to allow a hashref of settings to be
          passed to the database() keyword at runtime.  Thanks Alan!
          (This was released as 0.91_01 for testing first.)

0.91    2010-12-21
        - Whoah - didn't "use strict" in Dancer::Plugin::Database::Handle!
          Last tweak release, then I'll push 1.00 out soon.

0.90    2010-12-10
        - New features quick_insert, quick_update, quick_delete.  The database
          keyword now returns a Dancer::Plugin::Database::Handle object, which
          is a subclass of DBI::db so does everything you'd expect a DBI
          connection handle to do, but adds extra convenience methods.
        - Fixed test failures on Windows systems.

       (Large version bump due to new features; assuming there are no reports of
       issues with this version (there shouldn't be!), I'll release 1.0 soon,
       for those who look for a >= 1.0 version number as an indication of being
       production-ready.


0.12    2010-12-03
        - Documentation mentioned connectivity-check-threshold instead of the
          correct connection_check_threshold.  Thanks to bessarabov for catching
          this and submitting corrections via GitHub!

0.11    2010-11-09 (CoD Black Ops day!)