@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Dancer-Plugin-Database
-version:            1.11
+version:            1.11_01
 abstract:           easy database connections for Dancer applications
 author:
     - David Precious <davidp@preshweb.co.uk>
